# ncnn-android-depth_anything

app/src/main/jni/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
